fix(item): cursor
add cursor to cover the whole card

--- a/src/scss/main-content.scss
+++ b/src/scss/main-content.scss
@@ -72,6 +72,8 @@
     flex-wrap: wrap;
     gap: 15px 10px;
 
+    cursor: pointer;
+
     @media screen and (max-device-width: s.$max-device-width) {
       padding: 10px;
     }
